PROJECT( libopensync-plugin-gnokii C )
CMAKE_MINIMUM_REQUIRED( VERSION 2.4 )

SET( VERSION "0.36" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

SET( OPENSYNC_MIN_VERSION "0.36" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )
FIND_PACKAGE( GNOKII REQUIRED )

INCLUDE( OpenSyncInternal )

INCLUDE( CTest )
ENABLE_TESTING()

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( tests )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

