PROJECT( libopensync-plugin-google-calender C )

SET( VERSION "0.34" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
#TODO FIND_PACKAGE( HTTPLIB2 REQUIRED ) 

INCLUDE( OpenSyncInternal )
INCLUDE( OpenSyncPlatforms )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

