PROJECT( libopensync-plugin-google-calendar C )

SET( VERSION "0.37" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

SET( OPENSYNC_MIN_VERSION "0.37" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )
#TODO FIND_PACKAGE( HTTPLIB2 REQUIRED ) 

INCLUDE( OpenSyncInternal )
INCLUDE( OpenSyncPlatforms )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

