PROJECT( libopensync-plugin-gpe C )

SET( VERSION "0.38" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

SET( OPENSYNC_MIN_VERSION "0.37" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )

INCLUDE( OpenSyncInternal )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

