PROJECT( libopensync-plugin-irmc C )

SET( VERSION "0.37" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )

SET( OPENSYNC_MIN_VERSION "0.37" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )
FIND_PACKAGE( OpenObex REQUIRED )
FIND_PACKAGE( BlueZ )

INCLUDE( OpenSyncInternal )

SET( CMAKE_BUILD_TYPE RelWithDebInfo )

# Defaults
SET( ENABLE_BLUETOOTH TRUE CACHE BOOL "Bluetooth Transport" )
SET( ENABLE_IRDA TRUE CACHE BOOL "IrDA Transport" )

IF ( OPENOBEX_FOUND )
	SET( ENABLE_OBEX TRUE BOOL "Obex Transport" )

	# TODO Write check for bluetooth support in openobex
	IF ( ENABLE_BLUETOOTH AND BLUEZ_FOUND )
	    SET( HAVE_BLUETOOTH TRUE BOOL "Bluetooth Transport enabled" )
	ENDIF ( ENABLE_BLUETOOTH AND BLUEZ_FOUND )

	# TODO Write check for irda support in openobex
	IF ( ENABLE_IRDA )
	    SET( HAVE_IRDA TRUE BOOL "IrDA Transport enabled" )
	ENDIF ( ENABLE_IRDA )
ENDIF ( OPENOBEX_FOUND )

CONFIGURE_FILE( "config.h.cmake" "config.h" )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

