PROJECT( libopensync-plugin-kdepim )

SET( VERSION "0.36" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

SET( OPENSYNC_MIN_VERSION "0.36" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( Qt3 REQUIRED )
FIND_PACKAGE( KDEPIM3 REQUIRED )

INCLUDE( OpenSyncInternal )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

