PROJECT( libopensync-plugin-kdepim )

SET( VERSION "0.38" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

SET( OPENSYNC_MIN_VERSION "0.37" )

CMAKE_MINIMUM_REQUIRED( VERSION 2.4.4 )

IF(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
	cmake_policy(SET CMP0005 NEW)
ENDIF(COMMAND cmake_policy)

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( Qt3 REQUIRED )
FIND_PACKAGE( KDEPIM3 REQUIRED )

INCLUDE( OpenSyncInternal )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

