dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.58)
AC_INIT([OpenSync Kdepim Plugin], 0.18, [], [libopensync-plugin-kdepim])
AM_INIT_AUTOMAKE(foreign)
AC_CONFIG_SRCDIR(src/kdepim_sync.cpp)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.0.0)
AC_PATH_KDE

export PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:/usr/lib/pkgconfig:$prefix/lib/pkgconfig:/usr/local/lib/pkgconfig
pkg_modules="opensync-1.0"
PKG_CHECK_MODULES(OSYNC, [opensync-1.0])

# Needed only because opensync-xml leaks libxml and glib
PKG_CHECK_MODULES(XML, [libxml-2.0])
PKG_CHECK_MODULES(GLIB, [glib-2.0])

OPENSYNC_CONFIGDIR=$(pkg-config --variable=configdir opensync-1.0)
OPENSYNC_PLUGINDIR=$(pkg-config --variable=plugindir opensync-1.0)
OPENSYNC_FORMATSDIR=$(pkg-config --variable=formatsdir opensync-1.0)
OPENSYNC_HEADERDIR=$(pkg-config --variable=headerdir opensync-1.0)
OPENSYNC_INCLUDEDIR=$(pkg-config --variable=includedir opensync-1.0)
OPENSYNC_LIBDIR=$(pkg-config --variable=libdir opensync-1.0)

AC_SUBST(OPENSYNC_CONFIGDIR)
AC_SUBST(OPENSYNC_PLUGINDIR)
AC_SUBST(OPENSYNC_FORMATSDIR)
AC_SUBST(OPENSYNC_HEADERDIR)
AC_SUBST(OPENSYNC_INCLUDEDIR)
AC_SUBST(OPENSYNC_LIBDIR)

## AC_CHECK_HEADER(${$ac_kde_includes}/libkcal/resourcecalendar.h)

dnl PACKAGE set before
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

AC_CONFIG_FILES([ Makefile tests/Makefile misc/kdepim.spec ])
AC_OUTPUT

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
