PROJECT( libopensync-plugin-moto NONE )

SET( VERSION "0.34" ) 

SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules )

FIND_PACKAGE( OpenSync REQUIRED )
# TODO: Find PyBluez, ...

INCLUDE( OpenSyncInternal )

SET( OPENSYNC_PYTHONPLG_DIR "${OPENSYNC_PYTHON_PLUGINDIR}" )

INSTALL( FILES motosync.py DESTINATION ${OPENSYNC_PYTHONPLG_DIR} )
INSTALL( FILES moto-sync DESTINATION ${OPENSYNC_CONFIGDIR} )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

