PROJECT( opie-sync )

SET( OPIESYNC_VERSION "0.33" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )
FIND_PACKAGE( CURL REQUIRED )

if (CURL_FOUND)
  message(STATUS "Found CURL: ${CURL_LIBRARIES}")
endif (CURL_FOUND)

INCLUDE( OpenSyncInternal )

SET( CMAKE_BUILD_TYPE RelWithDebInfo )

ADD_SUBDIRECTORY( src )

